[tool.poetry]
name = "encryptdecryptpy"
version = "0.1.0"
description = "Encrypt Decrypt Strings"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
